Fixing popup for URL not to appear behind a map
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1302 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/popup.css
+++ b/WebContent/styles/popup.css
@@ -1,4 +1,5 @@
 div.popup-blackout {
+	z-index: 1;
 	background-image: url(../images/popup-bg.png); }
 	
 div.popup-content {
